--- a/src/screens/Questions/styles.css
+++ b/src/screens/Questions/styles.css
@@ -9,3 +9,81 @@
 #pagina-principal-questions h1 {
   margin: 24px auto;
 }
+
+.time-questions {
+  position: absolute;
+  top: 24px;
+  right: 80px;
+  color: whitesmoke;
+  font-size: 20px;
+  padding: 8px 16px;
+  border-radius: 8px;
+  border: 1px solid white;
+}
+
+.card-input-box-container {
+  width: 100%;
+}
+
+.card-input-element {
+  display: none;
+}
+
+.card-input {
+  margin: 10px;
+  padding: 10px;
+  width: 80%;
+  height: auto;
+  min-height: 80px;
+  display: flex;
+  align-items: center;
+}
+
+.card-input:hover {
+  cursor: pointer;
+}
+
+.card-input-element:checked + .card-input {
+  box-shadow: 0 0 1px 1px #2ecc71;
+}
+
+.pagina-principal-questions-content {
+  color: white;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 24px;
+}
+
+#pagina-principal-questions button {
+  background-color: var(--color-green);
+  padding: 8px 48px;
+  align-self: center;
+  outline: none;
+  border: none;
+
+  box-shadow: inset 0px 0px 4px rgba(0,0,0, 0.9);
+}
+
+#pagina-principal-questions button:hover {
+  box-shadow: inset 0px 0px 2px rgba(0,0,0, 0.9);
+  box-shadow: 0px 0px 4px rgba(6, 226, 36, 0.4);
+}
+
+.result-container {
+  background-color: rgba(0,0,0, 0.9);
+  position: absolute;
+  width: 150vh;
+  height: 100vh;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.result-container h3{ 
+  background-color: var(--color-green);
+  padding: 24px;
+}
